// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruneCache({}, { hasYarn: false }) 1`] = `Object {}`;

exports[`pruneInstall({ ... }, { hasYarn: false }) 1`] = `Object {}`;

exports[`pruneInstall({ ... }, { hasYarn: true }) 1`] = `
Object {
  "install": Array [
    "npm install --global yarn",
  ],
}
`;

exports[`pruneInstall({}, { hasYarn: false }) 1`] = `Object {}`;

exports[`pruneInstall({}, { hasYarn: true }) 1`] = `Object {}`;

exports[`updateNodeNpm({}, { hasYarn: false }) 1`] = `
Object {
  "install": Array [
    Object {
      "ps": "Install-Product node $env:nodejs_version x64",
    },
    "npm install --global npm-windows-upgrade",
    "npm-windows-upgrade --no-spinner --npm-version latest",
  ],
}
`;

exports[`updateNodeNpm({}, { hasYarn: true }) 1`] = `
Object {
  "install": Array [
    Object {
      "ps": "Install-Product node $env:nodejs_version x64",
    },
    "npm install --global npm-windows-upgrade",
    "npm-windows-upgrade --no-spinner --npm-version latest",
    "npm install --global yarn",
  ],
}
`;
